--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>DANL 310 - James</title>
+<title>DANL 399 - James</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -71,7 +71,7 @@ ul.task-list li input[type="checkbox"] {
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container">
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">DANL 310</span>
+    <span class="navbar-title">DANL 399</span>
     </a>
   </div>
             <div id="quarto-search" class="" title="Search"></div>
@@ -81,7 +81,7 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="./basic-example.html" rel="" target="">
+    <a class="nav-link" href="./capstone_project.html" rel="" target="">
  <span class="menu-text">project</span></a>
   </li>  
 </ul>
@@ -502,7 +502,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     <div class="nav-footer-left">
       &nbsp;
     </div>   
-    <div class="nav-footer-center">Copyright 2023, Byeong-Hak Choe</div>
+    <div class="nav-footer-center">Copyright 2023</div>
     <div class="nav-footer-right">
       &nbsp;
     </div>
