--- a/table.html
+++ b/table.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>DANL 310 - Untitled</title>
+<title>DANL 399 - Untitled</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -106,7 +106,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container">
     <a class="navbar-brand" href="./index.html">
-    <span class="navbar-title">DANL 310</span>
+    <span class="navbar-title">DANL 399</span>
     </a>
   </div>
             <div id="quarto-search" class="" title="Search"></div>
@@ -116,7 +116,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="./basic-example.html" rel="" target="">
+    <a class="nav-link" href="./capstone_project.html" rel="" target="">
  <span class="menu-text">project</span></a>
   </li>  
 </ul>
@@ -2313,19 +2313,19 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: right;">0.9126</td>
+<td style="text-align: right;">0.3412</td>
 <td style="text-align: right;">1e+03</td>
-<td style="text-align: right;">335.7926</td>
+<td style="text-align: right;">-1232.9241</td>
 </tr>
 <tr class="even">
-<td style="text-align: right;">0.8145</td>
+<td style="text-align: right;">0.7265</td>
 <td style="text-align: right;">1e+05</td>
-<td style="text-align: right;">-203.5133</td>
+<td style="text-align: right;">572.1317</td>
 </tr>
 <tr class="odd">
-<td style="text-align: right;">0.8279</td>
+<td style="text-align: right;">0.1039</td>
 <td style="text-align: right;">1e+07</td>
-<td style="text-align: right;">837.1090</td>
+<td style="text-align: right;">870.3851</td>
 </tr>
 </tbody>
 </table>
@@ -2347,19 +2347,19 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: right;">0.913</td>
+<td style="text-align: right;">0.341</td>
 <td style="text-align: right;">1000</td>
-<td style="text-align: right;">335.793</td>
+<td style="text-align: right;">-1232.924</td>
 </tr>
 <tr class="even">
-<td style="text-align: right;">0.814</td>
+<td style="text-align: right;">0.726</td>
 <td style="text-align: right;">100000</td>
-<td style="text-align: right;">-203.513</td>
+<td style="text-align: right;">572.132</td>
 </tr>
 <tr class="odd">
-<td style="text-align: right;">0.828</td>
+<td style="text-align: right;">0.104</td>
 <td style="text-align: right;">10000000</td>
-<td style="text-align: right;">837.109</td>
+<td style="text-align: right;">870.385</td>
 </tr>
 </tbody>
 </table>
@@ -2726,7 +2726,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
     <div class="nav-footer-left">
       &nbsp;
     </div>   
-    <div class="nav-footer-center">Copyright 2023, Byeong-Hak Choe</div>
+    <div class="nav-footer-center">Copyright 2023</div>
     <div class="nav-footer-right">
       &nbsp;
     </div>
